feat(verification): supervisor and pathologist workflow changes
Applies the Supervisor Verification and Pathologist Clinical Authorization
specification. Sample status sync on authorize/return was already in place; the
rest was not.

Patient identity on the queues and the audit trail. TestResultSummaryResponse
and VerificationHistoryItemResponse now carry patientCode (and patientName on
history), so a case can be found by ID as well as by name. History identity is
resolved from the result the audit row points at, not from the row's own
patient_code column, which the verification writes fill with the specimen
barcode. Resolution is batched: two queries per page rather than two per row.

Date-range filtering. The audit search gained a fromTimestamp bound, threaded
through both /history endpoints and both services, so Today / Last 7 / Last 30
narrow the query rather than the current page — filtering client-side would have
hidden older matches behind pagination.

Bulk approval now groups by case, not by parameter. Approving an anchor already
verifies every pending parameter on its sample, so counting parameter rows both
overstated the queue and let a case count as safe on the strength of one normal
analyte while another was critical. A case is safe only if every parameter is,
and the anchor is chosen by the panel's display order so it stays stable across
refreshes. The supervisor's batch remark now reaches VerificationRequest instead
of being dropped, and the UI collects it in a confirmation modal.

Actor attribution prefers the token's display name for the fields a report
shows — verified-by, authorized-by, returned-by, and the electronic signature
line. lastModifiedBy stays on the login id.

Also: /clinical redirects to /clinical/worklist, and the supervisor queue and
both history screens search over patient code and test name.

Backend: 169 tests pass. Frontend: lint, tsc, 16 unit tests and build all pass.